[package]
name = "graphql_test"
version = "0.1.0"
authors = ["jmanu <jm.castillo12@uniandes.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
rand = "0.8.2"

async-graphql = "2.5.1"
async-graphql-actix-web = "2.5.1"
actix-web = "3.3"
actix-rt = "1.1"
actix-cors = "0.5.4"
actix-web-actors = "3.0"

dashmap = "4.0"
slab = "0.4"
tokio = { version = "1.0", features = ["time", "sync"] }
tokio-stream = { version = "0.1.3", features = ["time", "sync"] }
stream-cancel = "0.8.0"
async-stream = "0.3.0"
pin-project = "1.0.5"
futures = "0.3"
once_cell = "1.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.10.0"

tracing = "0.1" 
tracing-subscriber = "0.2"
tracing-actix-web = "0.2" 
tracing-log = "0.1"
tracing-futures = "0.2"
lazy_static = "1.4"

sqlx = { version = "0.4", features = [ "runtime-actix-rustls", "postgres", "uuid", "json", "macros" ] }

thiserror = "1.0"